[package]
name = "elfdb"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = """
Help save Christmas with ELFDB - the interactive debugger for ELF code.
"""

documentation = "https://github.com/udoprog/elfdb"
homepage = "https://github.com/udoprog/elfdb"
repository = "https://github.com/udoprog/elfdb"

readme = "README.md"

[dependencies]
failure = "*"
hashbrown = "*"
tui = {git = "https://github.com/fdehau/tui-rs.git"}
termion = "*"
